# Tormel

./: .env.example  .gitignore  README.md  docker-compose.yml  implementation_plan.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/billing/: billing.controller.ts  billing.module.ts  billing.service.ts
backend/src/dashboard/: dashboard.controller.ts  dashboard.service.ts
backend/src/orders/: orders.controller.ts  orders.module.ts  orders.service.ts
backend/src/payments/: payments.controller.ts  payments.module.ts  payments.service.ts
backend/src/printing/: printing.controller.ts  printing.module.ts  printing.service.ts
backend/src/prisma/: prisma.service.ts
backend/src/products/: products.controller.ts  products.service.ts
backend/src/realtime/: realtime.gateway.ts  realtime.module.ts
backend/src/tables/: tables.controller.ts  tables.module.ts  tables.service.ts
backend/src/types/: escpos.d.ts
backend/src/users/: users.controller.ts  users.service.ts
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/electron/: main.js  preload.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/services/: api.ts  offline.ts  socket.ts
frontend/src/stores/: authStore.ts  cartStore.ts
src/: App.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_verifactu_schema.sql  004_tickets_historial.sql  005_money_to_centimos.sql
src-tauri/src/: dinero.rs  error.rs  lib.rs  main.rs
src-tauri/src/auth/: login_guard.rs  mod.rs  permissions.rs  pin.rs  session.rs
src-tauri/src/commands/: caja.rs  clientes.rs  config.rs  email.rs  fs_commands.rs  mesas.rs  mod.rs  productos.rs  tickets.rs  usuarios.rs  ventas.rs
src-tauri/src/db/: connection.rs  migrator.rs  mod.rs
src-tauri/src/models/: caja.rs  cliente.rs  common.rs  mesa.rs  mod.rs  negocio.rs  producto.rs  ticket.rs  usuario.rs  venta.rs
src-tauri/src/repositories/: caja_repo.rs  cliente_repo.rs  evento_repo.rs  mesa_repo.rs  mod.rs  negocio_repo.rs  producto_repo.rs  ticket_repo.rs  usuario_repo.rs  venta_repo.rs
src-tauri/src/services/: mod.rs  secret_store.rs  usuario_service.rs
src-tauri/src/services/impresion/: escpos_builder.rs  mod.rs
src-tauri/src/services/verifactu/: client.rs  huella.rs  mod.rs  sender_worker.rs  xml_builder.rs
src-tauri/tests/: stress_test.rs
src/__tests__/: AppShell.test.tsx  MesasPanel.test.tsx  VerifactuPanel.test.tsx  authStore.test.ts  testUtils.tsx
src/components/: TecladoNumericoModal.css  TecladoNumericoModal.tsx
src/context/: DialogContext.tsx  Dialogs.css
src/lib/: api.ts  format.ts
src/stores/: authStore.ts
src/styles/: index.css
(+95 files in other folders)
