[package]
name = "tormel-pos"
version = "0.1.0"
description = "Tormel POS — TPV de escritorio para hostelería"
authors = ["Tormel"]
edition = "2021"

[lib]
name = "tormel_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.35", features = ["bundled", "modern_sqlite"] }

# Seguridad
argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"

# Fechas
chrono = { version = "0.4", features = ["serde"] }

# Errores
thiserror = "2"

# Async runtime (para Verifactu queue en background)
tokio = { version = "1", features = ["sync", "time"] }

# Logging
log = "0.4"
env_logger = "0.11"
base64 = "0.22.1"
quick-xml = "0.40.1"
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
